[package]
name = "proxy-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
encoding_rs = "0.8"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.1"
url = "2.1"
http = "0.2"
urlencoding = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
regex = "1"
