[package]
name = "proxy-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[dependencies]
encoding_rs = "0.8.0"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
lazy_static = "1.5.0"
tide = "0.16.0"
http-types = "2.12.0"
surf = "2.3.2"
